--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-*.pdf
+*.docx
+Labs/lab01/.RData
+Labs/lab01/.Rhistory
+Labs/lab01/.Rproj.user/62640270/pcs/debug-breakpoints.pper
+Labs/lab01/.Rproj.user/62640270/pcs/files-pane.pper
+Labs/lab01/.Rproj.user/62640270/pcs/source-pane.pper
+Labs/lab01/.Rproj.user/62640270/pcs/windowlayoutstate.pper
+Labs/lab01/.Rproj.user/62640270/pcs/workbench-pane.pper
+Labs/lab01/.Rproj.user/62640270/persistent-state
+Labs/lab01/.Rproj.user/62640270/rmd-outputs
+Labs/lab01/.Rproj.user/62640270/saved_source_markers
+Labs/lab01/.Rproj.user/62640270/sources/per/t/02FD636F
+Labs/lab01/.Rproj.user/62640270/sources/per/t/02FD636F-contents
+Labs/lab01/.Rproj.user/62640270/sources/prop/EBA42034
+Labs/lab01/.Rproj.user/62640270/sources/prop/INDEX
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/626402700BFFDFA4/chunks.json
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/62640270F4000472/chunks.json
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cb8i6ta3lkkvs/000002.csv
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cb8i6ta3lkkvs/000003.error
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/chunks.json
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/csn2ix4ourysn/000002.csv
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/csn2ix4ourysn/000003.metadata
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/csn2ix4ourysn/000003.png
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/csn2ix4ourysn/000003.snapshot
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cw36kwuzqgqey/000002.csv
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cw36kwuzqgqey/000003.metadata
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cw36kwuzqgqey/000003.png
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cw36kwuzqgqey/000003.snapshot
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cxgc7g7d8n6jk/000002.csv
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cxgc7g7d8n6jk/000003.metadata
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cxgc7g7d8n6jk/000003.png
+Labs/lab01/.Rproj.user/shared/notebooks/ECC89ADD-lab01-hello-R/1/s/cxgc7g7d8n6jk/000003.snapshot
+Labs/lab01/.Rproj.user/shared/notebooks/patch-chunk-names
+Labs/lab01/.Rproj.user/shared/notebooks/paths
+Labs/lab01/fig-resize-global.png
+Labs/lab01/fig-resize-local.png
+Labs/lab01/lab01.Rproj
+Labs/lab01/rstudio-anatomy.png
+Labs/lab01/theme-highlight.png
+Labs/lab01/yaml-raw-to-rendered.png
