Changes to Lab 3
Updates to the files in Lab 3.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ Labs/lab01/lab01.Rproj
 Labs/lab01/rstudio-anatomy.png
 Labs/lab01/theme-highlight.png
 Labs/lab01/yaml-raw-to-rendered.png
+.Rproj.user
+Labs/lab03/met_all.gz
+Labs/lab03/.Rhistory
