Updating files for HW1
I did some work on the first homework assignment.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ Labs/lab01/yaml-raw-to-rendered.png
 Labs/lab03/met_all.gz
 Labs/lab03/.Rhistory
 Labs/lab03/.RData
+Assignments/hw1/.Rhistory
+Assignments/hw1/.RData
