--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ Labs/lab03/.RData
 Assignments/hw1/.Rhistory
 Assignments/hw1/.RData
 Labs/lab04/met_all.gz
+Labs/lab04/.Rhistory
+Labs/lab04/.RData
