HW2 Starter Files
Uploading starter data and files for the second homework assignment

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-*.docx
 Labs/lab01/.RData
 Labs/lab01/.Rhistory
 Labs/lab01/.Rproj.user/62640270/pcs/debug-breakpoints.pper
@@ -48,3 +47,7 @@ Labs/lab04/met_all.gz
 Labs/lab04/.Rhistory
 Labs/lab04/.RData
 Assignments/hw1/JSC370_HW1.log
+Guest Speaker Reflection 4.docx
+Guest Speaker Reflection 3.docx
+Guest Speaker Reflection 2.docx
+Guest Speaker Reflection 1.docx
