Adding content for lab 5
Adding content for lab 5 (raw Rmd file from the course page), and adding an additional filename to the gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ Guest Speaker Reflection 4.docx
 Guest Speaker Reflection 3.docx
 Guest Speaker Reflection 2.docx
 Guest Speaker Reflection 1.docx
+Labs/lab05/.Rhistory
