Continuing with Lab 5
Continuing the work for Lab 5

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Guest Speaker Reflection 3.docx
 Guest Speaker Reflection 2.docx
 Guest Speaker Reflection 1.docx
 Labs/lab05/.Rhistory
+Labs/lab05/met_all.gz
