--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ Guest Speaker Reflection 1.docx
 Labs/lab05/.Rhistory
 Labs/lab05/met_all.gz
 Labs/lab05/.RData
+Guest Speaker Reflection 5.docx
+Labs/lab06/.RData
+Labs/lab06/.Rhistory
