--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ Labs/lab05/.RData
 Guest Speaker Reflection 5.docx
 Labs/lab06/.RData
 Labs/lab06/.Rhistory
+Assignments/hw2/.RData
+Assignments/hw2/.Rhistory
