Starting the Midterm Project
Files for the midterm project

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,7 @@ Labs/lab06/.RData
 Labs/lab06/.Rhistory
 Assignments/hw2/.RData
 Assignments/hw2/.Rhistory
+Assignments/midterm/.RData
+Assignments/midterm/.Rhistory
+Assignments/midterm/spotify_client_id.txt
+Assignments/midterm/spotify_client_secret.txt
