--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ Assignments/midterm/.RData
 Assignments/midterm/.Rhistory
 Assignments/midterm/spotify_client_id.txt
 Assignments/midterm/spotify_client_secret.txt
+Guest Speaker Reflection 6.docx
+Labs/lab08/lab08.Rproj
+Labs/lab08/.Rhistory
+Labs/lab08/.RData
