--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ Guest Speaker Reflection 6.docx
 Labs/lab08/lab08.Rproj
 Labs/lab08/.Rhistory
 Labs/lab08/.RData
+Assignments/hw3/.RData
+Assignments/hw3/.Rhistory
