--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ Labs/lab08/.Rhistory
 Labs/lab08/.RData
 Assignments/hw3/.RData
 Assignments/hw3/.Rhistory
+Labs/lab10/.Rhistory
+Labs/lab10/.RData
