--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ Assignments/hw3/.RData
 Assignments/hw3/.Rhistory
 Labs/lab10/.Rhistory
 Labs/lab10/.RData
+Labs/lab11/.RData
+Labs/lab11/.Rhistory
