Adding final project files

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ Labs/lab10/.Rhistory
 Labs/lab10/.RData
 Labs/lab11/.RData
 Labs/lab11/.Rhistory
+Assignments/final/spotify_client_secret.txt
+Assignments/final/spotify_client_id.txt
