Final Project Data Collection

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ Labs/lab11/.RData
 Labs/lab11/.Rhistory
 Assignments/final/spotify_client_secret.txt
 Assignments/final/spotify_client_id.txt
+Assignments/final/.RData
+Assignments/final/.Rhistory
+Assignments/final/Data-Cleaning-Merging.Rmd
