--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ Assignments/final/spotify_client_id.txt
 Assignments/final/.RData
 Assignments/final/.Rhistory
 Assignments/final/Data-Cleaning-Merging.Rmd
+Assignments/hw5/
+Assignments/final/
+Labs/JSC370-Test-Website/
